submitting tool and database done

--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<title></title>
+<title>xenoCare</title>
 <link rel="stylesheet" href="/bundle.css" />
-<main></main>
+<main>
+  
+</main>
 <script src="/bundle.js"></script>
+<script src="https://www.cognitoforms.com/s/pNMC8SYGGU-KEhKcEeeUuA"></script>
+<script>Cognito.load("forms", { id: "1" })</script>
